Change the meanings of the values of Osc 1/2 Wave, Voice Mode, LFO Wave, and Chorus Mode (1)

--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -1061,7 +1061,7 @@ function getStoredCCValueString(index, number) {
 <td colspan="8"><hr></td>
 </tr>
 <tr>
-<td colspan="2"><b>Osc 1</b> Wave [Saw|-|Tri|Pls|Sqr]  </td>
+<td colspan="2"><b>Osc 1</b> Wave [Saw|-|-|Tri|Pls|Sqr]</td>
 <td colspan="2"><b>Osc 1</b> Shape                     </td>
 <td colspan="2"><b>Osc 1</b> Morph                     </td>
 <td colspan="2"><b>Mixer</b> Noise/Sub Osc [N|S]       </td>
@@ -1076,7 +1076,7 @@ function getStoredCCValueString(index, number) {
 <td><input  id="inputMIXER_SUB_OSC  "  type="range" min="0" max="127" step="1" oninput="onChangeControlChange(MIXER_SUB_OSC  , value)"></td>
 <td><span    id="spanMIXER_SUB_OSC  " >-</span></td>
 <tr>
-<td colspan="2"><b>Osc 2</b> Wave [Saw|-|Tri|Nos|Sqr]  </td>
+<td colspan="2"><b>Osc 2</b> Wave [Saw|-|-|Tri|Nos|Sqr]</td>
 <td colspan="2"><b>Osc 2</b> Coarse [-|+]              </td>
 <td colspan="2"><b>Osc 2</b> Pitch [-|+]               </td>
 <td colspan="2"><b>Mixer</b> Osc Mix [1|2]             </td>
@@ -1129,7 +1129,7 @@ function getStoredCCValueString(index, number) {
 <tr>
 <td colspan="2"><b>EG</b> Osc Amt [-|+]                  </td>
 <td colspan="2"><b>EG</b> Osc Dst [P|2P|1S]              </td>
-<td colspan="2">Voice Mode [Pol|Par|Mon|LP|Lgt]   </td>
+<td colspan="2">Voice Mode [Pol|Par|-|M|LP|Lgt]   </td>
 <td colspan="2">Portamento                        </td>
 </tr>
 <tr>
@@ -1143,7 +1143,7 @@ function getStoredCCValueString(index, number) {
 <td><span    id="spanPORTAMENTO     " >-</span></td>
 </tr>
 <tr>
-<td colspan="2"><b>LFO</b> Wave [T1|T2|Saw|SH|Sqr]     </td>
+<td colspan="2"><b>LFO</b> Wave [T1|T2|-|Saw|SH|Sqr]   </td>
 <td colspan="2"><b>LFO</b> Rate                        </td>
 <td colspan="2"><b>LFO</b> Depth                       </td>
 <td colspan="2"><b>LFO</b> Fade Time                   </td>
@@ -1194,7 +1194,7 @@ function getStoredCCValueString(index, number) {
 <td colspan="8"><hr></td>
 </tr>
 <tr>
-<td colspan="2"><b>Chorus</b> Mode [Off|M|PS|S|S2]     </td>
+<td colspan="2"><b>Chorus</b> Mode [Off|M|-|PS|S|S2]   </td>
 <td colspan="2"><b>Chorus</b> Rate                     </td>
 <td colspan="2"><b>Chorus</b> Depth                    </td>
 <td colspan="2"><b>Chorus</b> Delay Time               </td>
