--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -1143,7 +1143,7 @@ function getStoredCCValueString(index, number) {
 <td><span    id="spanPORTAMENTO     " >-</span></td>
 </tr>
 <tr>
-<td colspan="2"><b>LFO</b> Wave [T1|T2|-|Saw|SH|Sqr]   </td>
+<td colspan="2"><b>LFO</b> Wave [Tri|Sin|-|Saw|SH|Sqr] </td>
 <td colspan="2"><b>LFO</b> Rate                        </td>
 <td colspan="2"><b>LFO</b> Depth                       </td>
 <td colspan="2"><b>LFO</b> Fade Time                   </td>
