--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -1129,7 +1129,7 @@ function getStoredCCValueString(index, number) {
 <tr>
 <td colspan="2"><b>EG</b> Osc Amt [-|+]                  </td>
 <td colspan="2"><b>EG</b> Osc Dst [P|2P|1S]              </td>
-<td colspan="2">Voice Mode [Pol|Par|-|M|LP|Lgt]   </td>
+<td colspan="2">Voice Mode [Pol|Par|-|Mon|LP|Lgt] </td>
 <td colspan="2">Portamento                        </td>
 </tr>
 <tr>
