--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -998,7 +998,7 @@ function getStoredCCValueString(index, number) {
     <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
     <td></td>
     <td></td>
-    <td><input type="button" value="Reset"                    onclick="panic()"></td></tr>
+    <td><input type="button" value="Panic"                    onclick="panic()"></td></tr>
 <tr><td>&nbsp;</td></tr>
 </table>
 
