--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -1061,7 +1061,7 @@ function getStoredCCValueString(index, number) {
 <td colspan="8"><hr></td>
 </tr>
 <tr>
-<td colspan="2"><b>Osc 1</b> Wave [Saw|-|Sin|Tri|Pls|Sqr]</td>
+<td colspan="2"><b>Osc 1</b> Wave [Saw|Sin|-|Tri|Pls|Sqr]</td>
 <td colspan="2"><b>Osc 1</b> Shape                     </td>
 <td colspan="2"><b>Osc 1</b> Morph                     </td>
 <td colspan="2"><b>Mixer</b> Noise/Sub Osc [N|S]       </td>
@@ -1076,7 +1076,7 @@ function getStoredCCValueString(index, number) {
 <td><input  id="inputMIXER_SUB_OSC  "  type="range" min="0" max="127" step="1" oninput="onChangeControlChange(MIXER_SUB_OSC  , value)"></td>
 <td><span    id="spanMIXER_SUB_OSC  " >-</span></td>
 <tr>
-<td colspan="2"><b>Osc 2</b> Wave [Saw|O1|Sin|Tri|Nos|Sqr]</td>
+<td colspan="2"><b>Osc 2</b> Wave [Saw|Sin|-|Tri|Nos|Sqr]</td>
 <td colspan="2"><b>Osc 2</b> Coarse [-|+]              </td>
 <td colspan="2"><b>Osc 2</b> Pitch [-|+]               </td>
 <td colspan="2"><b>Mixer</b> Osc Mix [1|2]             </td>
