Change Osc 1 Wave and LFO Wave (2)

--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -1116,7 +1116,7 @@ function getStoredCCValueString(index, number) {
 <td><span    id="spanPORTAMENTO     " >-</span></td>
 </tr>
 <tr>
-<td colspan="2"><b>LFO</b> Wave [Sin|Tri|-|Saw|SH|Sqr] </td>
+<td colspan="2"><b>LFO</b> Wave [Sin|Saw|-|Tri|SH|Sqr] </td>
 <td colspan="2"><b>LFO</b> Rate                        </td>
 <td colspan="2"><b>LFO</b> Depth                       </td>
 <td colspan="2"><b>LFO</b> Fade Time                   </td>
