--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -99,7 +99,7 @@ const EG_AMP_MOD      = 31;
 const REL_EQ_DECAY    = 89;
 const P_BEND_RANGE    = 85;
 
-const CHORUS_LEVEL    = 63;
+const CHORUS_MIX      = 63;
 const CHORUS_RATE     = 61;
 const CHORUS_DEPTH    = 60;
 
@@ -171,7 +171,7 @@ var controlNumberToStringMap = new Map([
   [ REL_EQ_DECAY   , "REL_EQ_DECAY   " ],
   [ P_BEND_RANGE   , "P_BEND_RANGE   " ],
 
-  [ CHORUS_LEVEL   , "CHORUS_LEVEL   " ],
+  [ CHORUS_MIX     , "CHORUS_MIX     " ],
   [ CHORUS_RATE    , "CHORUS_RATE    " ],
   [ CHORUS_DEPTH   , "CHORUS_DEPTH   " ],
 
@@ -223,7 +223,7 @@ var controllersInLocalStorage = [
   REL_EQ_DECAY   ,
   P_BEND_RANGE   ,
 
-  CHORUS_LEVEL   ,
+  CHORUS_MIX     ,
   CHORUS_RATE    ,
   CHORUS_DEPTH   ,
 
@@ -277,7 +277,7 @@ presetControllers[EG_AMP_MOD     ] = [0  , 0  , 0  , 0  , 127, 0  , 0  , 0  ];
 presetControllers[REL_EQ_DECAY   ] = [0  , 0  , 0  , 0  , 127, 0  , 0  , 0  ];
 presetControllers[P_BEND_RANGE   ] = [12 , 12 , 12 , 12 , 12 , 12 , 12 , 12 ];
 
-presetControllers[CHORUS_LEVEL   ] = [127, 127, 127, 127, 127, 127, 127, 0  ];
+presetControllers[CHORUS_MIX     ] = [127, 127, 127, 127, 127, 127, 127, 0  ];
 presetControllers[CHORUS_RATE    ] = [64 , 64 , 64 , 64 , 64 , 64 , 64 , 64 ];
 presetControllers[CHORUS_DEPTH   ] = [64 , 64 , 64 , 64 , 64 , 64 , 64 , 64 ];
 
@@ -667,7 +667,7 @@ function setRandom() {
   controllersInLocalStorage.forEach(function(i) {
     if ((i != VOICE_MODE     ) &&
         (i != AMP_GAIN       ) &&
-        (i != CHORUS_LEVEL   ) &&
+        (i != CHORUS_MIX     ) &&
         (i != CHORUS_RATE    ) &&
         (i != CHORUS_DEPTH   ) &&
         (i != EG_AMP_MOD     ) &&
@@ -679,7 +679,7 @@ function setRandom() {
 
 function setRandomChorus() {
   controllersInLocalStorage.forEach(function(i) {
-    if ((i == CHORUS_LEVEL   ) ||
+    if ((i == CHORUS_MIX     ) ||
         (i == CHORUS_RATE    ) ||
         (i == CHORUS_DEPTH   )) {
       onChangeControlChange(i, rand(128));
@@ -862,7 +862,7 @@ function fileExport() {
   str += fileExportOneLine(REL_EQ_DECAY   );
   str += fileExportOneLine(P_BEND_RANGE   );
   str += "\n";
-  str += fileExportOneLine(CHORUS_LEVEL   );
+  str += fileExportOneLine(CHORUS_MIX     );
   str += fileExportOneLine(CHORUS_RATE    );
   str += fileExportOneLine(CHORUS_DEPTH   );
   str += "\n";
@@ -1183,14 +1183,14 @@ function getStoredCCValueString(index, number) {
 <td><span    id="spanP_BEND_RANGE   " >-</span></td>
 </tr>
 <tr>
-<td colspan="2"><b>Chorus</b> Level                    </td>
+<td colspan="2"><b>Chorus</b> Mix [Dry|Wet]            </td>
 <td colspan="2"><b>Chorus</b> Rate                     </td>
 <td colspan="2"><b>Chorus</b> Depth                    </td>
 <td colspan="2">                                </td>
 </tr>
 <tr>
-<td><input  id="inputCHORUS_LEVEL   "  type="range" min="0" max="127" step="1" oninput="onChangeControlChange(CHORUS_LEVEL   , value)"></td>
-<td><span    id="spanCHORUS_LEVEL   " >-</span></td>
+<td><input  id="inputCHORUS_MIX     "  type="range" min="0" max="127" step="1" oninput="onChangeControlChange(CHORUS_MIX     , value)"></td>
+<td><span    id="spanCHORUS_MIX     " >-</span></td>
 <td><input  id="inputCHORUS_RATE    "  type="range" min="0" max="127" step="1" oninput="onChangeControlChange(CHORUS_RATE    , value)"></td>
 <td><span    id="spanCHORUS_RATE    " >-</span></td>
 <td><input  id="inputCHORUS_DEPTH   "  type="range" min="0" max="127" step="1" oninput="onChangeControlChange(CHORUS_DEPTH   , value)"></td>
