--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -946,32 +946,32 @@ function getStoredCCValueString(index, number) {
 <table>
 <tr><td>Preset</td>
     <td></td>
-    <td><input type="button" value="#4 Synth Bass [Mono]"     onclick="preset(4)"></td>
+    <td><input type="button" value="#4 Synth Bass"     onclick="preset(4)"></td>
     <td></td>
-    <td><input type="button" value="#5 PWM Lead [Legato]"     onclick="preset(5)"></td>
+    <td><input type="button" value="#5 PWM Lead"       onclick="preset(5)"></td>
     <td></td>
-    <td><input type="button" value="#6 Electric Piano [Poly]" onclick="preset(6)"></td>
+    <td><input type="button" value="#6 Electric Piano" onclick="preset(6)"></td>
     <td></td>
-    <td><input type="button" value="#7 Initial [Poly]"        onclick="preset(7)"></td>
+    <td><input type="button" value="#7 Initial"        onclick="preset(7)"></td>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
     <td>Misc</td>
     <td></td>
-    <td><input type="button" value="Random Ctrl"              onclick="setRandom()"></td>
+    <td><input type="button" value="Random Ctrl"       onclick="setRandom()"></td>
     <td></td>
-    <td><input type="button" value="Random FX"                onclick="setRandomChorus()"></td></tr>
+    <td><input type="button" value="Random FX"         onclick="setRandomChorus()"></td></tr>
 <tr><td></td>
     <td></td>
-    <td><input type="button" value="#0 Fifth Lead [Legato] "  onclick="preset(0)"></td>
+    <td><input type="button" value="#0 Fifth Lead"     onclick="preset(0)"></td>
     <td></td>
-    <td><input type="button" value="#1 Synth Strings [Poly]"  onclick="preset(1)"></td>
+    <td><input type="button" value="#1 Synth Strings"  onclick="preset(1)"></td>
     <td></td>
-    <td><input type="button" value="#2 Synth Brass 1 [Poly]"  onclick="preset(2)"></td>
+    <td><input type="button" value="#2 Synth Brass 1"  onclick="preset(2)"></td>
     <td></td>
-    <td><input type="button" value="#3 Synth Brass 2 [Poly]"  onclick="preset(3)"></td>
+    <td><input type="button" value="#3 Synth Brass 2"  onclick="preset(3)"></td>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
     <td></td>
     <td></td>
-    <td><input type="button" value="Panic"                    onclick="panic()"></td></tr>
+    <td><input type="button" value="Panic"             onclick="panic()"></td></tr>
 <tr><td>&nbsp;</td></tr>
 </table>
 
