--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -234,7 +234,7 @@ var presetControllers = {};
 // PRESET                             #0   #1   #2   #3   #4   #5   #6   #7   
 presetControllers[OSC_1_WAVE     ] = [127, 127, 127, 127, 127, 127, 127, 0  ];
 presetControllers[OSC_1_SHAPE    ] = [0  , 0  , 0  , 0  , 0  , 0  , 0  , 0  ];
-presetControllers[OSC_1_MORPH    ] = [64 , 64 , 64 , 64 , 64 , 0  , 64 , 0  ];
+presetControllers[OSC_1_MORPH    ] = [64 , 64 , 64 , 64 , 64 , 0  , 0  , 0  ];
 presetControllers[MIXER_SUB_OSC  ] = [127, 127, 127, 127, 127, 127, 127, 64 ];
 
 presetControllers[OSC_2_WAVE     ] = [0  , 0  , 0  , 0  , 0  , 0  , 0  , 0  ];
@@ -242,18 +242,18 @@ presetControllers[OSC_2_COARSE   ] = [64 , 64 , 64 , 64 , 64 , 64 , 64 , 64 ];
 presetControllers[OSC_2_PITCH    ] = [109, 72 , 72 , 72 , 72 , 72 , 72 , 64 ];
 presetControllers[MIXER_OSC_MIX  ] = [64 , 64 , 64 , 64 , 64 , 64 , 64 , 0  ];
 
-presetControllers[FILTER_CUTOFF  ] = [115, 115, 91 , 115, 55 , 115, 67 , 127];
+presetControllers[FILTER_CUTOFF  ] = [115, 115, 91 , 103, 55 , 115, 67 , 127];
 presetControllers[FILTER_RESO    ] = [64 , 64 , 32 , 32 , 64 , 64 , 32 , 0  ];
 presetControllers[FILTER_EG_AMT  ] = [64 , 64 , 88 , 16 , 112, 64 , 76 , 64 ];
 presetControllers[FILTER_KEY_TRK ] = [64 , 64 , 64 , 64 , 64 , 64 , 64 , 0  ];
 
 presetControllers[EG_ATTACK      ] = [0  , 64 , 48 , 96 , 0  , 0  , 0  , 0  ];
-presetControllers[EG_DECAY       ] = [0  , 64 , 80 , 96 , 96 , 0  , 104, 0  ];
+presetControllers[EG_DECAY       ] = [0  , 64 , 80 , 96 , 96 , 0  , 100, 0  ];
 presetControllers[EG_SUSTAIN     ] = [127, 127, 0  , 0  , 0  , 127, 0  , 127];
 presetControllers[EG_RELEASE     ] = [0  , 0  , 0  , 0  , 0  , 0  , 0  , 0  ];
 
-presetControllers[EG_OSC_AMT     ] = [64 , 64 , 70 , 64 , 64 , 64 , 64 , 64 ];
-presetControllers[EG_OSC_DST     ] = [0  , 0  , 64 , 0  , 0  , 0  , 0  , 0  ];
+presetControllers[EG_OSC_AMT     ] = [64 , 64 , 72 , 64 , 64 , 64 , 88 , 64 ];
+presetControllers[EG_OSC_DST     ] = [0  , 0  , 64 , 0  , 0  , 0  , 127, 0  ];
 presetControllers[VOICE_MODE     ] = [127, 0  , 0  , 0  , 75 , 127, 0  , 0  ];
 presetControllers[PORTAMENTO     ] = [0  , 0  , 0  , 0  , 0  , 0  , 0  , 0  ];
 
@@ -273,11 +273,11 @@ presetControllers[AMP_SUSTAIN    ] = [127, 127, 127, 127, 127, 127, 127, 127];
 presetControllers[AMP_RELEASE    ] = [0  , 0  , 0  , 0  , 0  , 0  , 0  , 0  ];
 
 presetControllers[FILTER_MODE    ] = [0  , 0  , 0  , 0  , 0  , 0  , 0  , 0  ];
-presetControllers[EG_AMP_MOD     ] = [0  , 127, 0  , 0  , 127, 0  , 127, 0  ];
-presetControllers[REL_EQ_DECAY   ] = [127, 127, 127, 127, 127, 127, 127, 0  ];
+presetControllers[EG_AMP_MOD     ] = [127, 127, 0  , 0  , 127, 127, 127, 0  ];
+presetControllers[REL_EQ_DECAY   ] = [127, 127, 0  , 0  , 127, 127, 0  , 0  ];
 presetControllers[P_BEND_RANGE   ] = [12 , 12 , 12 , 12 , 12 , 12 , 12 , 12 ];
 
-presetControllers[CHORUS_MIX     ] = [64 , 64 , 64 , 64 , 64 , 64 , 64 , 0  ];
+presetControllers[CHORUS_MIX     ] = [127, 127, 127, 127, 127, 127, 127, 0  ];
 presetControllers[CHORUS_RATE    ] = [64 , 64 , 64 , 64 , 64 , 64 , 64 , 64 ];
 presetControllers[CHORUS_DEPTH   ] = [64 , 64 , 64 , 64 , 64 , 64 , 64 , 64 ];
 
@@ -965,9 +965,9 @@ function getStoredCCValueString(index, number) {
     <td></td>
     <td><input type="button" value="#1 Synth Strings"  onclick="preset(1)"></td>
     <td></td>
-    <td><input type="button" value="#2 Synth Brass 1"  onclick="preset(2)"></td>
+    <td><input type="button" value="#2 Synth Brass"    onclick="preset(2)"></td>
     <td></td>
-    <td><input type="button" value="#3 Synth Brass 2"  onclick="preset(3)"></td>
+    <td><input type="button" value="#3 Synth Pad"      onclick="preset(3)"></td>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
     <td></td>
     <td></td>
