--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -106,6 +106,11 @@ const CHORUS_RATE     = 58;
 const CHORUS_DEPTH    = 59;
 
 
+const DELAY_FEEDBACK  = 92;
+const DELAY_TIME      = 90;
+
+
+
 const PC_BY_CC_8      = 112;
 const PC_BY_CC_9      = 113;
 const PC_BY_CC_10     = 114;
@@ -178,6 +183,11 @@ var controlNumberToStringMap = new Map([
   [ CHORUS_RATE    , "CHORUS_RATE    " ],
   [ CHORUS_DEPTH   , "CHORUS_DEPTH   " ],
 
+
+  [ DELAY_FEEDBACK , "DELAY_FEEDBACK " ],
+  [ DELAY_TIME     , "DELAY_TIME     " ],
+
+
 ]);
 
 var controllersInLocalStorage = [
@@ -229,6 +239,11 @@ var controllersInLocalStorage = [
   CHORUS_MIX     ,
   CHORUS_RATE    ,
   CHORUS_DEPTH   ,
+
+
+  DELAY_FEEDBACK ,
+  DELAY_TIME     ,
+
 
 ];
 
@@ -283,6 +298,11 @@ presetControllers[P_BEND_RANGE   ] = [12 , 12 , 12 , 12 , 12 , 12 , 12 , 12 ];
 presetControllers[CHORUS_MIX     ] = [127, 127, 127, 127, 127, 127, 127, 0  ];
 presetControllers[CHORUS_RATE    ] = [64 , 64 , 64 , 64 , 64 , 64 , 64 , 64 ];
 presetControllers[CHORUS_DEPTH   ] = [64 , 64 , 64 , 64 , 64 , 64 , 64 , 64 ];
+
+
+presetControllers[DELAY_FEEDBACK ] = [32 , 32 , 32 , 32 , 32 , 32 , 32 , 0  ];
+presetControllers[DELAY_TIME     ] = [93 , 93 , 93 , 93 , 93 , 93 , 93 , 93 ];
+
 
 
 const PRESET_NUMBER_INITIAL = 7;
@@ -673,6 +693,8 @@ function setRandom() {
         (i != CHORUS_MIX     ) &&
         (i != CHORUS_RATE    ) &&
         (i != CHORUS_DEPTH   ) &&
+        (i != DELAY_FEEDBACK ) &&
+        (i != DELAY_TIME     ) &&
         (i != EG_AMP_MOD     ) &&
         (i != REL_EQ_DECAY   )) {
       onChangeControlChange(i, rand(128));
@@ -684,7 +706,9 @@ function setRandomChorus() {
   controllersInLocalStorage.forEach(function(i) {
     if ((i == CHORUS_MIX     ) ||
         (i == CHORUS_RATE    ) ||
-        (i == CHORUS_DEPTH   )) {
+        (i == CHORUS_DEPTH   ) ||
+        (i == DELAY_FEEDBACK ) ||
+        (i == DELAY_TIME     )) {
       onChangeControlChange(i, rand(128));
     }
   });
@@ -868,6 +892,11 @@ function fileExport() {
   str += fileExportOneLine(CHORUS_MIX     );
   str += fileExportOneLine(CHORUS_RATE    );
   str += fileExportOneLine(CHORUS_DEPTH   );
+  str += "\n";
+  str += "\n";
+  str += fileExportOneLine(DELAY_FEEDBACK );
+  str += fileExportOneLine(DELAY_TIME     );
+  str += "\n";
   str += "\n";
   str += "  \"_end         \" : \"\"\n";
   str += "}\n";
@@ -1198,6 +1227,22 @@ function getStoredCCValueString(index, number) {
 <td><span    id="spanCHORUS_RATE    " >-</span></td>
 <td><input  id="inputCHORUS_DEPTH   "  type="range" min="0" max="127" step="1" oninput="onChangeControlChange(CHORUS_DEPTH   , value)"></td>
 <td><span    id="spanCHORUS_DEPTH   " >-</span></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td colspan="2"><b>Delay</b> Feedback                  </td>
+<td colspan="2"><b>Delay</b> Time                      </td>
+<td colspan="2">                                </td>
+<td colspan="2">                                </td>
+</tr>
+<tr>
+<td><input  id="inputDELAY_FEEDBACK "  type="range" min="0" max="127" step="1" oninput="onChangeControlChange(DELAY_FEEDBACK , value)"></td>
+<td><span    id="spanDELAY_FEEDBACK " >-</span></td>
+<td><input  id="inputDELAY_TIME     "  type="range" min="0" max="127" step="1" oninput="onChangeControlChange(DELAY_TIME     , value)"></td>
+<td><span    id="spanDELAY_TIME     " >-</span></td>
+<td></td>
+<td></td>
 <td></td>
 <td></td>
 </tr>
