Prepare for additional features

--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -53,6 +53,7 @@ const PITCH_BEND     = 0xE0;
 
 
 const MODULATION      = 1;
+const BTH_CONTROLLER  = 2;
 const SUSTAIN_PEDAL   = 64;
 
 
@@ -110,6 +111,11 @@ const DELAY_FEEDBACK  = 92;
 const DELAY_TIME      = 90;
 const DELAY_MODE      = 35;
 
+
+const BTH_FILTER_AMT  = 60;
+const BTH_AMP_MOD     = 61;
+const VEL_EG_AMT      = 62;
+const VEL_AMP_EG_AMT  = 63;
 
 const PC_BY_CC_8      = 112;
 const PC_BY_CC_9      = 113;
