Support Breath Controller (4)

--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -1278,7 +1278,7 @@ function getStoredCCValueString(index, number) {
 </tr>
 <tr>
 <td colspan="2">Breath Filter Amt [-|+]         </td>
-<td colspan="2">Breath Amp Mod [Off|Lin|Qad]    </td>
+<td colspan="2">Breath Amp Mod [Off|Qad|Lin]    </td>
 <td colspan="2">                                </td>
 <td colspan="2">                                </td>
 </tr>
