--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -79,10 +79,10 @@ const EG_RELEASE      = 72;
 
 const EG_OSC_AMT      = 91;
 const EG_OSC_DST      = 89;
-const VOICE_MODE      = 27;
+const VOICE_MODE      = 14;
 const PORTAMENTO      = 5;
 
-const LFO_WAVE        = 18;
+const LFO_WAVE        = 12;
 const LFO_RATE        = 3;
 const LFO_DEPTH       = 17;
 const LFO_FADE_TIME   = 56;
@@ -429,7 +429,8 @@ function afterChangeOsc1Or2WaveOrMixerSubOscOrVoiceModeOrEGAmpModOrRelEqDecay() 
   var targetCCNumbers = [FILTER_KEY_TRK];
 
   var valueVoiceMode = localStorage.getItem("keyVOICE_MODE     ");
-  if (Math.floor(((valueVoiceMode * 10) + 127) / 254) == 1) {
+  if (valueVoiceMode == 1 || Math.floor(((valueVoiceMode * 10) + 127) / 254) == 1) {
+//  if (Math.floor(((valueVoiceMode * 10) + 127) / 254) == 1) {
     targetCCNumbers.forEach(function(i) {
       document.getElementById("span" + controlNumberToStringMap.get(i)).style.color = 'lightgray';
     });
